/*!\page PPL6History PPL6 History
PPL6 - HISTORY

Version 6.4.11
  - Bugfix in PNG-Laderoutine

Version 6.4.10  vom 10.11.2011	(CVS-Tag: REL_6_4_10)
  - CCurl-Klasse: Signals werden nun standardmäßig deaktiviert,
    da Anwendungen mit mehreren Threads sonst in Probleme laufen.
    Mit der neuen Funktion CCurl::EnableSignals können die Signals
    explizit wieder aktiviert werden.

Version 6.4.9  vom 30.10.2011	(CVS-Tag: REL_6_4_9)
  - Kompatibilitätsprobleme mit OpenSSL 1.x.x behoben
  - Funktion StartThread, um einen Thread ohne Verwendung der
    Klasse CThread zu starten
  - Webserver-Klasse, die auf libmicrohttpd aufsetzt 

Version 6.4.8 vom 27.07.2011	(CVS-Tag: REL_6_4_8)
  - Datenbankklassen: Neue Funktion "databaseType"
  - Bugfix in Compression-Klasse: bei Verwendung des V2-Prefix
    wurde beim Komprimieren statt Länge der unkomprimierten Daten
    die Länge der komprimierten Daten geschrieben
  - Bugfix in Datenbank-Connect-Funktion. Fehlerhaften "ifdef" für
    Postgres korrigiert
  - Bugfix in Postgres-Escape-Funktion. Das letzte Zeichen des
    Strings wird nun nicht mehr abgeschnitten.

Version 6.4.7 vom 25.05.2011	(CVS-Tag: REL_6_4_7)
  - CDateTime holt sich nun die Millisekunden via "gettimeofday",
    sofern die Funktion vorhanden ist. Bei der Ausgabe mit
    "get" wird nun der Platzhalter "%*" unterstützt, der durch die
    Millisekunden ersetzt wird.
  - Überarbeitung und Vereinfachung der Exception-Klasse
  - Neue Klasse: CIcecast zum Streamen von MP3 oder OGG Dateien
    an einen Icecast Server
  - Update der Dokumentation auf Doxygen 1.7.3
  - CAssocArray unterstützt nun CDateTime und kann CWString Im- und
    Exportieren (es erfolgt eine Konvertierung nach UTF-8)

Version 6.4.6 vom 17.03.2011	(CVS-Tag: REL_6_4_6)
  - CAssocArray hat Copy-Konstruktor und Zuweisungsoperator für CArray
    erhalten.
  - CDateTime vollständig dokumentiert
  - CDir verwendet nun unter Windows die Wide-Character-Funktionen