@@ -3,6 +3,9 @@ PPL6 - HISTORY
 
 Version 6.4.11
   - Bugfix in PNG-Laderoutine
+  - Kritischer Bugfix in Sybase::Ping: Result wurde nicht freigegeben, wodurch
+    nachfolgende Operationen blockiert und die Verbindung somit
+    unbrauchbar wurde
 
 Version 6.4.10  vom 10.11.2011	(CVS-Tag: REL_6_4_10)
   - CCurl-Klasse: Signals werden nun standardmäßig deaktiviert,
